# cc-mock-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: brainstorm-cc-mock-server-2026-07-21.md
plans/260721-2250-cc-mock-server/: phase-01-scaffold-config.md  phase-02-recorder.md  phase-03-matcher.md  phase-04-filter-selector.md  phase-05-agent-handler.md  phase-06-proxy-router.md  phase-07-control-cli.md  phase-08-streaming.md  phase-09-agent-stream.md  plan.md
src/cc_mock_server/: __init__.py  __main__.py  agent_handler.py  app.py  cli.py  config.py  control_api.py  enums.py  filter.py  help.py  installer.py  matcher.py  models.py  recorder.py  router.py  sanitize.py  selector.py  server.py  streaming.py
tests/: conftest.py  test_agent_handler.py  test_agent_stream.py  test_cli.py  test_config.py  test_control_api.py  test_cross_loop.py  test_filter.py  test_installer.py  test_matcher.py  test_models.py  test_proxy_integration.py  test_recorder.py  test_router.py  test_selector.py  test_streaming.py  test_streaming_integration.py
