[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-mock-server"
version = "0.1.0"
description = "Smart mocking proxy for AI coding agents: intercept third-party API calls, route to an agent or built-in handler, record, and replay via fuzzy match."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "mitmproxy>=10.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
]

[project.scripts]
cc-mock = "cc_mock_server.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/cc_mock_server"]
